<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditStudentActivity">

    <ImageView
        android:id="@+id/avatar_image_view"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/image"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar_glasses"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/name_label"
        app:layout_constraintBaseline_toBaselineOf="@id/name_input"
        app:layout_constraintStart_toStartOf="@+id/avatar_image_view"
        app:layout_constraintTop_toBottomOf="@+id/avatar_image_view" />

    <TextView
        android:id="@+id/id_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/id_label"
        app:layout_constraintBaseline_toBaselineOf="@id/id_input"
        app:layout_constraintStart_toStartOf="@+id/avatar_image_view"
        app:layout_constraintTop_toBottomOf="@+id/name_text_view" />

    <TextView
        android:id="@+id/phone_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/phone_label"
        app:layout_constraintBaseline_toBaselineOf="@id/phone_input"
        app:layout_constraintStart_toStartOf="@+id/avatar_image_view"
        app:layout_constraintTop_toBottomOf="@+id/id_text_view" />

    <TextView
        android:id="@+id/address_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/address_label"
        app:layout_constraintBaseline_toBaselineOf="@id/address_input"
        app:layout_constraintStart_toStartOf="@+id/avatar_image_view"
        app:layout_constraintTop_toBottomOf="@+id/phone_text_view" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/avatar_image_view" />

    <EditText
        android:id="@+id/id_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/id_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/id_text_view"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <EditText
        android:id="@+id/phone_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/phone_text_view"
        app:layout_constraintTop_toBottomOf="@+id/id_input" />

    <EditText
        android:id="@+id/address_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/address_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/address_text_view"
        app:layout_constraintTop_toBottomOf="@+id/phone_input" />

    <CheckBox
        android:id="@+id/checkbox_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checked"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/address_text_view"
        app:layout_constraintTop_toBottomOf="@+id/address_input" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/delete_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save_button"
        app:layout_constraintStart_toEndOf="@id/cancel_button" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/delete_button" />


</androidx.constraintlayout.widget.ConstraintLayout>